--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               <tr class="table-active"><th scope="col"><i class="fab fa-python"></i> Introduction to Programming in Python</th></tr>
               <tr class="table-active"><th scope="col"><i class="fas fa-percent"></i> Probability and Statistics for Engineers</th></tr>
               <tr class="table-active"><th scope="col"><i class="fab fa-js-square"></i> Web Applications</th></tr>
+              <tr class="table-active"><th scope="col"><i class="fab fa-js-square"></i> Data Programming for Visualization (D3.js)</th></tr>
+              <tr class="table-active"><th scope="col"><i class="fas fa-database"></i> Introduction to Database Management</th></tr>
+              <tr class="table-active"><th scope="col"><i class="fas fa-code-branch"></i> Software Engineering</th></tr>
             </tbody>
           </table>
         </div>
@@ -89,10 +92,10 @@
             <h4>I can do all of this</h4>
           </div>
           <div class="row fade justify-content-around">
-              <div class="d-inline rounded specSkill"><p>Java</p></div>
+              <!-- <div class="d-inline rounded specSkill"><p>Java</p></div> -->
               <div class="d-inline rounded specSkill"><p>JavaScript</p></div>
               <div class="d-inline rounded specSkill"><p>Python</p></div>
-              <div class="d-inline rounded specSkill"><p>C++</p></div>
+             <!--  <div class="d-inline rounded specSkill"><p>C++</p></div> -->
               <div class="d-inline rounded specSkill"><p>HTML</p></div>
               <div class="d-inline rounded specSkill"><p>Node.JS</p></div>
               <div class="d-inline rounded specSkill"><p>Bootstrap</p></div>
@@ -103,9 +106,10 @@
               <div class="d-inline rounded specSkill"><p>NoSQL</p></div>
               <div class="d-inline rounded specSkill"><p>PostgreSQL</p></div>
               <div class="d-inline rounded specSkill"><p>Git</p></div>
-              <div class="d-inline rounded specSkill"><p>Angular5</p></div>
-              <div class="d-inline rounded specSkill"><p>d3.js</p></div>
+              <!-- <div class="d-inline rounded specSkill"><p>Angular5</p></div> -->
+              <div class="d-inline rounded specSkill"><p>D3.js</p></div>
               <div class="d-inline rounded specSkill"><p>Swift 4</p></div>
+              <div class="d-inline rounded specSkill"><p>ReactJS</p></div>
           </div>
         </div>
     </div>
