Updated projects and resume

--- a/index.html
+++ b/index.html
@@ -121,11 +121,39 @@
           <h1 class="display-3">Projects</h1>
           <h4>Just some projects I have worked on</h4>
         </div>
+        <div class="row fade">
+          <div class="col">
+            <h3>Tipsy Trials (iOS)</h3>
+            <h6>Drunk testing iOS application</h6>
+            <p>An iOS application thta allow users to test their cognitive skills while under the influence. Users are able to create a profile, save their score, and play a series of games.</p>
+            <p>A team of 5 that built this iOS application using Xcode 9 and Swift 4. I contributed by implementing Firebase, writing scripts to read and write data from the Firebase Database, creating a timer as the user's score, and creating the Profile Page.</p>
+            <a href="https://bitbucket.org/xdiaz1996/tipsy-ios/src/master/" class="btn" id="tssSite" target="_blank">Visit Website</a>
+          </div>
+          <div class="col">
+            <img src="Photos/tipsyTrials.png" class="rounded " alt="..." id="tipsyImg">
+          </div>
+        </div>
+        <br />
+        <hr />
+        <br />
+        <div class="row fade">
+          <div class="col">
+            <img src="Photos/sankeyDiagram.png" class="rounded" alt="..." id="sankeyImg">
+          </div>
+          <div class="col">
+            <h3>Cannabis: Emotions & Medical Relief</h3>
+            <h6>Website displaying different Cannabis Strains</h6>
+            <p>A website that displays Cannabis strains in Santa Cruz, using a Sankey Diagram. Each strain is linked to their emotional effects as well as medical purposes.</p>
+            <p>A team of 4 that built the website using HTML, CSS, JavaScript, and D3.js. I contributed to web scraping for data, styling the page, citing our sources, making the nodes clickable, and highlighting links that correspond to nodes that were clicked.</p>
+            <a href="https://shihwesley.github.io/CMPS165-Final-Presentation/index.html" class="btn" id="tssSite" target="_blank">Visit Website</a>
+          </div>
+        </div>
+        <br>
         <hr>
         <br>
         <div class="row fade">
           <div class="col">
-            <h2>Starving Slug</h2>
+            <h3>Starving Slug</h3>
             <h6>A recipe sharing website</h6>
             <p>A web application that allows users to share their recipes. Users are also able to search for recipes, and leave comments and ratings under others' recipes.</p>
             <p>A team of 6 that built this web application using MEAN Stack (MongoDB, ExpressJS, Angular5, NodeJS). I contributed by writing Unit Tests, functions, and models for the API server in NodeJS.</p>
@@ -138,13 +166,12 @@
         <br>
         <hr>
         <br>
-        <br>
         <div class="row fade">
           <div class="col">
             <img src="Photos/Portfolio.png" class="rounded" alt="..." id="webImg">
           </div>
           <div class="col">
-            <h2>Web Portfolio</h2>
+            <h3>Web Portfolio</h3>
             <h6>My personal website</h6>
             <p>Written purely in HTML, CSS, JavaScript, and Bootstrap. Displays my education, skills, projects and experience. Links to my GitHub, LinkedIn, and Resume</p>
             <p>This is my third time recreating my website. The reason for this is because I did not really like my prior designs. Also, it is good practice for my front-end skills.</p>
