Fixed Image Sizing

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <h1 class="display-3"><bold>Education</bold></h1>
           <h4>See what I've learned so far</h1>
         </div>
-        <div class="row fade">
-          <div class="col" style="text-align: center">
+        <div class="row fade" style="justify-content: center">
+          <div class="col-xs-12 col-sm-6" style="text-align: center">
             <h3>University of California<br />Santa Cruz</h3>
             <hr>
             <p>Expected Graduation: June 2019</p>
@@ -57,7 +57,7 @@
             <br>
             <a href="https://www.ucsc.edu/" class="btn" id="ucscSite" target="_blank">Visit Website</a>
           </div>
-          <div class="col" style="text-align: center">
+          <div class="col-xs-12 col-sm-6" style="text-align: center">
             <img src="Photos/ucscImg.jpg" class="rounded" alt="..." id="ucscImg">
           </div>
         </div>
@@ -122,14 +122,14 @@
           <h4>Just some projects I have worked on</h4>
         </div>
         <div class="row fade">
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <h3>Tipsy Trials (iOS)</h3>
             <h6>Drunk testing iOS application</h6>
             <p>An iOS application thta allow users to test their cognitive skills while under the influence. Users are able to create a profile, save their score, and play a series of games.</p>
             <p>A team of 5 that built this iOS application using Xcode 9 and Swift 4. I contributed by implementing Firebase, writing scripts to read and write data from the Firebase Database, creating a timer as the user's score, and creating the Profile Page.</p>
             <a href="https://bitbucket.org/xdiaz1996/tipsy-ios/src/master/" class="btn" id="tssSite" target="_blank">Visit Website</a>
           </div>
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <img src="Photos/tipsyTrials.png" class="rounded " alt="..." id="tipsyImg">
           </div>
         </div>
@@ -137,10 +137,10 @@
         <hr />
         <br />
         <div class="row fade">
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <img src="Photos/sankeyDiagram.png" class="rounded" alt="..." id="sankeyImg">
           </div>
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <h3>Cannabis: Emotions & Medical Relief</h3>
             <h6>Website displaying different Cannabis Strains</h6>
             <p>A website that displays Cannabis strains in Santa Cruz, using a Sankey Diagram. Each strain is linked to their emotional effects as well as medical purposes.</p>
@@ -152,14 +152,14 @@
         <hr>
         <br>
         <div class="row fade">
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <h3>Starving Slug</h3>
             <h6>A recipe sharing website</h6>
             <p>A web application that allows users to share their recipes. Users are also able to search for recipes, and leave comments and ratings under others' recipes.</p>
             <p>A team of 6 that built this web application using MEAN Stack (MongoDB, ExpressJS, Angular5, NodeJS). I contributed by writing Unit Tests, functions, and models for the API server in NodeJS.</p>
             <a href="http://starvingslug.com" class="btn" id="tssSite" target="_blank">Visit Website</a>
           </div>
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <img src="Photos/StarvingSlug.png" class="rounded " alt="..." id="tssImg">
           </div>
         </div>
@@ -167,10 +167,10 @@
         <hr>
         <br>
         <div class="row fade">
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <img src="Photos/Portfolio.png" class="rounded" alt="..." id="webImg">
           </div>
-          <div class="col">
+          <div class="col-xs-12 col-sm-6">
             <h3>Web Portfolio</h3>
             <h6>My personal website</h6>
             <p>Written purely in HTML, CSS, JavaScript, and Bootstrap. Displays my education, skills, projects and experience. Links to my GitHub, LinkedIn, and Resume</p>
@@ -188,21 +188,21 @@
         <hr style="border: 1px solid white">
         <br>
         <div class="row justify-content-around" style="padding-left: 15px">
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="margin-bottom: 10px">
                 <a href="https://www.github.com/KevLoi" target="_blank" id="linkLogo">
                     <div class="d-inline rounded contact-block">
                         <i class="fab fa-3x fa-github"></i>
                     </div>
                 </a>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="margin-bottom: 10px">
                 <a href="Resume.pdf" target="_blank" id="linkLogo">
                     <div class="d-inline rounded contact-block">
                         <i class="fas fa-3x fa-file-alt"></i>
                     </div>
                 </a>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2" style="margin-bottom: 10px">
                 <a href="https://www.linkedin.com/in/Kevin-Loi" target="_blank" id="linkLogo">
                     <div class="d-inline rounded contact-block">
                         <i class="fab fa-3x fa-linkedin-in"></i>
