--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container fade">
         <img src="Photos/profile-1.jpg" class="rounded-circle mx-auto d-block" alt="Hello World!" id="profile">
         <h1 class="display-1">Kevin Loi</h1>
-        <h3>Student @ UC Santa Cruz | Full Stack Intern at WalkThru</h4>
+        <h3>Student @ UC Santa Cruz | Freelance Web Developer</h4>
         <p id="copyright"> Copyright &copy; Kevin Loi </p>
         <button type="button" class="btn" id="start"><i class="far fa-hand-point-down"></i></button>
       </div>
