--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </a>
             </div>
             <div class="col-sm-2" style="margin-bottom: 10px">
-                <a href="Resume.pdf" target="_blank" id="linkLogo">
+                <a href="KevinLoiResume.pdf" target="_blank" id="linkLogo">
                     <div class="d-inline rounded contact-block">
                         <i class="fas fa-3x fa-file-alt"></i>
                     </div>
@@ -234,11 +234,6 @@
     </div>
 
     <script type="text/javascript" src="scripts/index.js"></script>
-
-    <!-- Bootstrap jQuery -->
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
   </body>
 
 </html>
