--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container fade">
           <img src="Photos/profile-2.jpg" class="rounded-circle mx-auto d-block" alt="Hello World!" id="profile">
           <h1 class="display-1">Kevin Loi</h1>
-          <h3>Student @ UC Santa Cruz | UI Engineer @ Murj</h3>
+          <h3>Student @ UC Santa Cruz | UI Engineer Intern @ Murj</h3>
           <p id="copyright"> Copyright &copy; Kevin Loi </p>
           <button type="button" class="btn" id="start"><i class="far fa-hand-point-down"></i></button>
         </div>
